# droidpilot

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: test_beam_flow.py
src/droidpilot/: __init__.py  adb.py  cli.py  device.py  errors.py  flows.py  mcp_server.py  transport.py  ui.py
tests/: test_flows.py  test_transport.py  test_ui.py
